# exchange-simulator

./: .gitignore  CMakeLists.txt  README.md  parser.cpp  parser.hpp  tight_spread.txt
scripts/: generate_test.py
src/: common.hpp  events.hpp  main.cpp  matching_engine.cpp  matching_engine.hpp  order_book.cpp  order_book.hpp  parser.cpp  parser.hpp  performance_profiler.hpp  printer_listener.hpp  test_listener.hpp
tests/: test_golden.cpp  test_matching_basic.cpp  test_matching_cancel.cpp  test_matching_engine.cpp  test_order_book.cpp  test_parser.cpp  test_performance.cpp
tests/data/: benchmark_100k.txt  tight_spread_expected.txt
